# bevy-asteroid-defender

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html
src/: background.rs  collision.rs  color.rs  common_components.rs  common_systems.rs  geom.rs  lib.rs  main.rs  meteor.rs  player.rs  powerup.rs  projectile.rs  resources.rs  ship.rs  states.rs  utils.rs
src/common/: collision.rs  common_components.rs  common_systems.rs  lifepoint.rs  mod.rs
src/config/: mod.rs
src/effects/: mod.rs  particle.rs  shake.rs  shield_particle.rs
src/events/: events.rs
src/gfx/: utils.rs
src/models/: bullet.rs  enemy.rs  mod.rs  player.rs  powerUp.rs
src/objects/: meteor.rs  mod.rs  powerup.rs  projectile.rs  ufo.rs
src/player/: mod.rs  player.rs  projectile.rs  ship.rs
src/state/: states.rs
src/ui/: ui.rs
src/upgrades/: mod.rs  upgrades.rs
src/utils/: cleanup.rs  collision.rs  manager.rs  mod.rs  object_pool.rs  setup.rs  utils.rs
