[package]
name = "bevy-defender-game"
version = "0.1.0"
edition = "2021"
authors = [
    "khaljunpol <paul.ranico@gmail.com>"
]

[[bin]]
name = "bevy-defender-game"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" 

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19.0"
rand = "0.8.5"
bevy_tweening = "0.8.0"
bevy_hanabi = "0.7.0"
