[package]
name = "bevy-defender-game"
version = "0.1.0"
edition = "2021"
authors = ["khaljunpol <paul.ranico@gmail.com>"]

[[bin]]
name = "bevy-defender-game"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

# Fast native dev builds (dynamic linking avoids re-linking the whole engine).
# Usage: cargo run --features dev
[features]
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Lean WASM release build.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[workspace]
resolver = "2"

[dependencies]
bevy = "0.11.2"
rand = "0.8.5"
bevy_tweening = "0.8.0"

# Frame limiter is desktop-only; WASM uses the browser's own vsync.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_framepace = "0.13.3"
